# datascience_lab02_homework

./: notebook_duck_db_homework.html  notebook_duck_db_homework.ipynb  pyproject.toml
