[project]
name = "MLOps_course_AGH_lab_02"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "duckdb",
    "jupyter",
    "matplotlib",
    "pandas",
    "pandas-stubs~=2.2.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]",
    "pyarrow",
    "ruff",
    "scipy",
    "sqlalchemy>=2.0.48",
]
